# Paradiziki

./: .dockerignore  .git-blame-ignore-revs  .gitignore  README.md  SpacemanDMM.toml  _build_dependencies.sh  paradise.dme
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/guides/: AUTODOC.md  DOWNLOADING.md  LOCALIZATION.md
.github/workflows/: auto_changelog.yml  build_rust.yml  ci.yml  ci_suite.yml  collect_data.yml  compile_all_maps.yml  compile_changelogs.yml  deploy.yml  discord_pr_announce.yml  dmi5.yml  generate_autodoc.yml  generate_changelog.yml  generate_web_assets.yml  label_merge_conflicts.yml  label_testmerge_conflicts.yml  labeler.yml  perform_station_tests.yml  pr-conflicts.yml  rebase.yml  render_nanomaps.yml  run_game_tests.yml  run_linters.yml  run_station_test.yml  run_unit_tests.yml  setup_build_artifact_game_tests.yml  setup_build_artifact_station_tests.yml  setup_build_artifact_unit_tests.yml  setup_build_artifacts.yml  stale.yml  testmerge.yml  update_tgs_dmapi.yml
SQL/: paradise_schema.sql
SQL/updates/: 36-37.sql  37-38.sql  38-39.sql  39-40.sql
_maps/: __MAP_DEFINES.dm  common.dm
code/: __byond_version_compat.dm  _compile_options.dm  world.dm
code/__DEFINES/: MC.dm  RCD.dm  __globals.dm  __proc_refs.dm  _atoms.dm  _click.dm  _globals.dm  _helpers.dm  _protection.dm  _span.dm  _statpanel.dm  _tick.dm  _unit_tests.dm  access.dm  achievements.dm  action.dm  actionspeed_modification.dm  admin.dm  admin_verb.dm  ai.dm  alerts.dm  announce.dm  announce_defines.dm  anomalies.dm  antagonists.dm  assert.dm  assets.dm  atmosphere.dm  atmospherics.dm  bingles.dm  blob.dm  blood.dm  blood_system.dm  borer.dm  bots.dm  byond_tracy.dm  callbacks.dm  cameranets.dm  cargo.dm  cargo_quests.dm  (+164 more)
code/__HELPERS/: AnimationLibrary.dm  _lists.dm  _logging.dm  _planes.dm  (+60 more)
config/: donations_text.txt  emojis.txt  events.txt  game_modes.txt  jobs.txt  jobs_highpop.txt  logs.txt  maps.txt  motd.txt
html/: statbrowser.css  statbrowser.html  statbrowser.js  title_screen.html
interface/: interface.dm  skin.dmf
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/dmi/: mod.rs
rust/src/error/: mod.rs
rust/src/file/: mod.rs
rust/src/hash/: mod.rs
rust/src/iconforge/: blending.rs  byond.rs  gags.rs  icon_operations.rs  image_cache.rs  spritesheet.rs
rust/src/logging/: mod.rs
rust/src/mapmanip/: mod.rs
rust/src/mapmanip/core/: map_to_string.rs
rust/src/mapmanip/procgen/: mod.rs
rust/src/mapmanip/test/: extracted_out.dmm
rust/src/milla/: api.rs  constants.rs  model.rs  simulate.rs  statics.rs  tick.rs
rust/src/rand_replace/: mod.rs
rust/src/sound_len/: mod.rs
rust/src/subsystem/: mod.rs
rust/src/subsystem/sun/: api.rs  mod.rs  statics.rs  sun.rs
rust/src/uuid/: api.rs
sound/: Attributions.txt  serversound_list.txt
strings/: cult_shuttle_curse.json  fake_pms_texts.txt  lobby_phrases.txt  sillytips.txt  tips.txt
tgui/: .swcrc  .yarnrc.yml  README.md  eslint.config.mjs  global.d.ts  jest.config.js  package.json  tsconfig.json  webpack.config.js
tools/: requirements.txt  ss13_genchangelog.py
(+4588 files in other folders)
