[package]
name = "rustlibs"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
byondapi = {version = "0.5.14", default-features = false }
eyre = "0.6.12"
slotmap = "1.0.7"
base64 = "0.22.1"
chrono = "0.4.41"
dmmtools = { git = "https://github.com/SpaceManiac/SpacemanDMM", rev = "6c5a751516ae0e8add4b2aa4388a1e84e96e7082", package = "dmm-tools" }
dreammaker = { git = "https://github.com/SpaceManiac/SpacemanDMM", rev = "6c5a751516ae0e8add4b2aa4388a1e84e96e7082", package = "dreammaker" }
fxhash = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
walkdir = "2.5.0"
regex = "1.10.5"
rand = "0.9.2"
itertools = "0.10.5"
diff = "0.1"
atomic_float = "1.0.0"
bitflags = "2.5.0"
scc = "3.4.8"
thread-priority = "3.0.0"
png = "0.18.0"

[features]
default = ["byond-515"]
byond-515 = ["byondapi/byond-515-1621"]
byond-516 = ["byondapi/byond-516-1651"]
