[package]
name = "rustlibs"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
byondapi = { git = "https://github.com/spacestation13/byondapi-rs.git", version = "0.6.14" }
eyre = "0.6.12"
slotmap = "1.0.7"
base64 = "0.22.1"
chrono = "0.4.41"
dmmtools = { git = "https://github.com/SpaceManiac/SpacemanDMM", rev = "6c5a751516ae0e8add4b2aa4388a1e84e96e7082", package = "dmm-tools" }
dreammaker = { git = "https://github.com/SpaceManiac/SpacemanDMM", rev = "6c5a751516ae0e8add4b2aa4388a1e84e96e7082", package = "dreammaker" }
fxhash = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
walkdir = "2.5.0"
regex = "1.10.5"
rand = "0.9.2"
itertools = "0.14.0"
diff = "0.1"
dmi = "0.5.0"
image = { version = "0.25", features = ["png"] }
qrcode = { version = "0.14.1", features = ["image", "svg"] }
symphonia = { version = "0.5.4", features = ["all-codecs"] }
md-5 = "0.10"
twox-hash = "2.1"
const-random = "0.1.18"
sha-1 = "0.10"
sha2 = "0.10"
once_cell  = "1.21"
tracy_full = "1.12.0"
dashmap = { version = "6.1", features = ["rayon", "serde"] }
rayon = "1.11"
flume = "0.12"
indexmap = { version = "2.11.4", features = [
    "serde",
    "rayon",
] }
ordered-float = { version = "5.1.0", features = ["serde"] }
hex = "0.4"

atomic_float = "1.0.0"
bitflags = "2.5.0"
scc = "3.4.8"
thread-priority = "3.0.0"
png = "0.18.0"
uuid = { version = "1.18.1", features = ["v4"] }
